# QtScrcpy

./: CMakeLists.txt
.github/workflows/: ubuntu.yml
ci/linux/: build_for_linux.sh
